--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/titletext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="Counterfeit Money Detector"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -21,28 +21,35 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleimage" />
+
     <ImageView
-            android:layout_width="190dp"
-            android:layout_height="184dp"
-            app:srcCompat="@drawable/titleimage"
-            android:id="@+id/titleimage"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="100dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:scaleX="1" android:scaleY="1"
-            app:layout_constraintHorizontal_bias="0.497"/>
+        android:id="@+id/titleimage"
+        android:layout_width="190dp"
+        android:layout_height="184dp"
+        android:layout_marginTop="60dp"
+        android:scaleX="1"
+        android:scaleY="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/titleimage" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/takephotobutton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="118dp"
-        android:background="@android:color/darker_gray"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/roundedbutton"
         android:backgroundTint="@android:color/darker_gray"
         android:hapticFeedbackEnabled="false"
+        android:bottomRightRadius="8dp"
+        android:bottomLeftRadius="8dp"
+        android:topRightRadius="8dp"
+        android:topLeftRadius="100dp"
         android:text="Take Photo"
         android:textColor="#000000"
+
         android:textColorHint="#A1A1A1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,8 +61,8 @@
         android:id="@+id/chooseimagebutton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="53dp"
-        android:background="#A1A1A1"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/roundedbutton"
         android:backgroundTint="#A1A1A1"
         android:text="Choose Image"
         android:textColor="#000000"
